# exactus

./: .gitignore  CITATION.cff  CMakeLists.txt  Makefile  README.md  bench_logic.py  benchmark_solver.py  bindings.cpp  boolean_noise_robust.py  boolean_partial_supervision.py  boolean_validate.py  boolean_validate_parity.py  bootstrap_metalsp.py  compose_recovery.py  gen_pascal.py  kernel_ridge.py  pascal.npy  plot_teacher_recovery.py  qm_minimize.py  scale_bench.py  seven_segment_recovery.py  train_7seg.py  train_california.py  train_mnist.py  train_stack.py
docs/: bitwise_engine.tex  bitwise_engine.toc
examples/spmv_demo/: benchmark_main.cpp  main.cpp
include/metalsp/: csr_matrix.hpp  kernel_poly.hpp  network_types.hpp  spmv.hpp
kernels/: kernel_poly.metal  spmv.metal  think.metal  universe.metal
old_scripts/: solve_7seg.py  solve_logic.py  train_adder.py  train_logic.py
results/: logic_bench_1.csv  logic_bench_1.json  logic_bench_latest.20251123-024236.csv  logic_bench_latest.20251123-024336.csv  logic_bench_latest.20251123-024336.json  logic_bench_latest.json  teacher_recovery.csv
results/scale/: scale_results.csv
src/: main.cpp
src/core/: csr_matrix.cpp  spmv_cpu.cpp
src/gpu/metal/: kernel_poly.mm  mc_network_metal.mm  pipeline.h  pipeline.mm  spmv_metal.mm
tests/: test_teacher_recovery.py
